--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lerp": "^1.0.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-three-fiber": "^4.0.16",
     "three": "^0.113.2"
